--- a/package.json
+++ b/package.json
@@ -11,16 +11,17 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.16",
-    "framer-motion": "^12.23.24",
-    "lucide-react": "^0.548.0",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "framer-motion": "^11.11.17",
+    "lucide-react": "^0.263.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
+    "@tailwindcss/postcss": "^4.0.0",
     "@types/react": "^19.1.16",
     "@types/react-dom": "^19.1.9",
-    "@vitejs/plugin-react": "^5.0.4",
+    "@vitejs/plugin-react": "^4.3.3",
     "autoprefixer": "^10.4.17",
     "eslint": "^9.36.0",
     "eslint-plugin-react-hooks": "^5.2.0",
@@ -28,6 +29,6 @@
     "globals": "^16.4.0",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
-    "vite": "^7.1.7"
+    "vite": "^5.4.10"
   }
 }
